ng-repeat working but with broken tile sizes and colors

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,6 +1,1 @@
-<div>
-    <div>{{uc.user.data.name}}</div>
-    <hr>
-    <div ng-repeat="repo in uc.repos.data">Repo Name: {{repo.name}}<br>
-    URL: <a ng-href="{{repo.html_url}}">{{repo.html_url}}<a ng-href><hr/></div>
-    </div>
+<h1>Home Page</h1>
