--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,5 +1,17 @@
+body {
+    color: rgba(0, 0, 0, 0.54);
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+#myPicture {
+    border-radius: 100%;
+    height: 230px;
+    width: 230px;
+    /* align-content:  center; */
+}
+
 .navBar md-content .ext-content {
     padding: 50px;
     margin: 20px;
-    background-color: #FFF2E0; }
-
+    background-color: #FFF2E0;
+}
