--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -8,3 +8,21 @@ body {
     height: 230px;
     width: 230px;
 }
+
+.repoTiles {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    overflow: hidden;
+}
+
+.repoTiles h1 {
+    font-size: 2em;
+}
+
+.githubImage {
+    width: 25%;
+    height: auto;
+}
+
+.parent {
+    overflow: hidden;
+  }
