--- a/server/public/views/aboutcode.html
+++ b/server/public/views/aboutcode.html
@@ -6,10 +6,12 @@
     <md-content layout-padding>
         <md-grid-list md-cols-gt-md="12" md-cols="3" md-cols-md="8" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter-gt-md="16px"
             md-gutter-md="8px" md-gutter="4px" ng-init="cc.tileCombiner(cc.repos, cc.gridTiles)">
-            <md-grid-tile ng-repeat="repo in cc.combinedTiles.data" style="background-color: {{repo.color}};" md-colspan-gt-sm="{{repo.colspan}}" md-rowspan-gt-sm="{{repo.rowspan}}" layout-wrap>
+            <md-grid-tile class="repoTiles md-whiteframe-5dp" layout="row" layout-align="center center" ng-repeat="repo in cc.combinedTiles.data" style="background-color: {{repo.color}};" md-colspan-gt-sm="{{repo.colspan}}" md-rowspan-gt-sm="{{repo.rowspan}}" layout-wrap>
                 <!-- <div ng-repeat="repo in cc.repos.data">Repo Name: {{repo.name}} -->
-                <div>Repo Name: {{repo.name}}
-                    <br> URL: <a ng-href="{{repo.html_url}}">{{repo.html_url}}</a>
+                <div class ="parent" style="text-align: center;">
+                     <a ng-href="{{repo.html_url}}"><img class="githubImage" src="/images/github-large.png" alt="View on Github"></a>
+                     <h1>{{repo.name}}</h1>
+                     <p>{{repo.description}}</p>
                 </div>
             </md-grid-tile>
         </md-grid-list>
