--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,6 +1,7 @@
 body {
     color: rgba(0, 0, 0, 0.54);
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    padding: 5px 15px 5px 15px;
 }
 
 #myPicture {
