--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -4,6 +4,10 @@ body {
     padding: 5px 15px 5px 15px;
 }
 
+#aboutme p {
+    padding: 0px 20px 0px 20px;
+}
+
 #myPicture {
     border-radius: 100%;
     height: 230px;
