--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -4,7 +4,7 @@
     <div id="homeLinks" layout="row" layout-align="center center">
         <a href="http://github.com/ericbfriday"><img src="/images/github-large.png" alt="Github"></a>
         <a href="https://www.instagram.com/ericbfriday/"><img src="/images/instagram-small.png" alt="Instagram"></a>
-        <a href="http://www.linkedin.com/in/ericbfriday"><img src="/images/linkedin-large.png" alt="LinkedIn"></a>
+        <a href="http://www.linkedin.com/in/ericfriday"><img src="/images/linkedin-large.png" alt="LinkedIn"></a>
         <a href="https://bitbucket.org/ericfriday/"><img src="/images/bitbucket-large.png" alt="BitBucket"></a>
     </div>
 </section>
