--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -27,15 +27,18 @@ body {
 }
 
 .repoTiles {
+    color: rgba(0, 0, 0, 0.65);
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     overflow: hidden;
 }
 
 .repoTiles h1 {
+    color: rgba(0, 0, 0, 0.65);
     font-size: 2em;
 }
 
 .githubImage {
+    opacity: .65;
     width: 25%;
     height: auto;
 }
