--- a/server/public/views/navbar.html
+++ b/server/public/views/navbar.html
@@ -1,13 +1,13 @@
-<div ng-controller="NavCtrl" ng-cloak>
-    <md-content class="md-padding">
-        <md-nav-bar md-selected-nav-item="currentNavItem" ng-init="currentNavItem='home'" nav-bar-aria-label="navigation links">
-            <md-nav-item md-nav-href="#/home" name="home" value="home">
+<div ng-controller="NavCtrl as nc" ng-cloak>
+    <md-content class="">
+        <md-nav-bar md-selected-nav-item="nc.currentNavItem" nav-bar-aria-label="navigation links">
+            <md-nav-item md-nav-href="#/" name="/">
                 Home
             </md-nav-item>
-            <md-nav-item md-nav-href="#/aboutme" name="aboutMe" value="aboutMe">
+            <md-nav-item md-nav-href="#/aboutme" name="/aboutme">
                 About Me
             </md-nav-item>
-            <md-nav-item md-nav-href="#/aboutcode" name="aboutCode" value="aboutCode">
+            <md-nav-item md-nav-href="#/aboutcode" name="/aboutcode">
                 My Projects
             </md-nav-item>
         </md-nav-bar>
