added basic resume outline

--- a/server/public/views/navbar.html
+++ b/server/public/views/navbar.html
@@ -7,6 +7,9 @@
             <md-nav-item md-nav-href="#/aboutme" name="/aboutme">
                 About Me
             </md-nav-item>
+            <md-nav-item md-nav-href="#/resume" name="/resume">
+                Resume
+            </md-nav-item>
             <md-nav-item md-nav-href="#/aboutcode" name="/aboutcode">
                 My Projects
             </md-nav-item>
