--- a/server/public/views/aboutme.html
+++ b/server/public/views/aboutme.html
@@ -1,17 +1,22 @@
 <section id="aboutme">
-    <div>
-        <h3>{{uc.user.data.name}}</h3>
+    <div layout="row">
+        <div layout="column" layout-fill layout="center center" flex="10"></div>
+        <div layout="column">
+            <h2>{{uc.user.data.name}}</h3>
+        <p>I'm a full stack web developer based out of {{uc.user.data.location}}. I work primarily in the MEAN stack. Outside
+            of coding, I love to ride my bicycle, hike, and spend time with my wife and friends.</p>
+        <p>My professional background is in the financial and insurance industries. During my tenures with Wells Fargo and Aon
+            Risk Solutions, I was able to provide technical communication, interaction, and services to a variety of c-suite
+            clientele. I'm excited to transfer my communication, team work, and problem solving skills to the realm of software
+            development.</p>
+        <h4>Some Friendly Github Stats:</h4>
+        <p>Public Repos: {{uc.user.data.public_repos}}</p>
+        <p>Total Private Repos: {{uc.user.data.total_private_repos}}</p>
+        <p>Followers: {{uc.user.data.followers}}</p>
+        <p>Following: {{uc.user.data.following}}</p>
+        <p>E-mail me at
+            <a href="mailto:{{uc.user.data.email}}" style="text-decoration: none; color: rgba(0, 0, 0, 0.54);">{{uc.user.data.email}}</a>.</p>
+        </div>
+        <div layout="column" layout-fill layout="center center" flex="10"></div>
     </div>
-    <p>I'm a full stack web developer based out of {{uc.user.data.location}}. I work primarily in the MEAN stack. Outside of
-        coding, I love to ride my bicycle, hike, and spend time with my wife and friends.</p>
-    <p>My professional background is in the financial and insurance industries. During my tenures with Wells Fargo and Aon Risk
-        Solutions, I was able to provide technical communication, interaction, and services to a variety of c-suite clientele.
-        I'm excited to transfer my communication, team work, and problem solving skills to the realm of software development.</p>
-    <h4>Some Friendly Github Stats:</h4>
-    <p>Public Repos: {{uc.user.data.public_repos}}</p>
-    <p>Total Private Repos: {{uc.user.data.total_private_repos}}</p>
-    <p>Followers: {{uc.user.data.followers}}</p>
-    <p>Following: {{uc.user.data.following}}</p>
-    <p>E-mail me at
-        <a href="mailto:{{uc.user.data.email}}" style="text-decoration: none; color: rgba(0, 0, 0, 0.54);">{{uc.user.data.email}}</a>.</p>
 </section>
