--- a/server/public/views/resume.html
+++ b/server/public/views/resume.html
@@ -1,10 +1,46 @@
 <section>
     <div class="container">
-
-        <div class="">
-            <div class="">
-                <h2>Experience</h2>
+        <div layout="row">
+        <div layout="column" layout-fill layout="center center" flex="10"></div>
+        <div layout="column">
+            <div class="md-padding">
+                <h1>Experience</h1>
             </div>
+
+            <md-card>
+                <div class="md-padding">
+                    <md-card-header>
+                        <md-card-header-text class="md-headline">
+                            <t>Full Stack Software Engineering Student
+                                <i>Prime Digital Academy</i>
+                            </t>
+                        </md-card-header-text>
+                    </md-card-header>
+                    <p>
+                        <ul>
+                            <li>Capstone Solo Project (Speech Builder): I created a speech therapy application based on the SEAN
+                                stack which provided curated word lists, pronunciations, and objective reporting metrics
+                                and graphs intended to provide speech therapists with a means to objectively track the progress
+                                and growth of their patients.</li>
+                            <li>Capstone Group Project (MusicNerdz): Worked on a development team of 5 developers to create an
+                                application which disrupted the educational space by providing framework for learning of
+                                music and history. </li>
+                            <li>MusicNerdz provided educational material for teachers to use along with student facing content
+                                and a CMS for administrators to curate and create additional lessons focused the convergence
+                                of contemporary music and history.</li>
+                            <li>Created MusicNerdz using SEAN stack (PostgreSQL, Express, Angular, Node) along with angular material
+                                for styling and Passport to ensure student and teacher confidentiality.</li>
+                            <li>MusicNerdz is being piloted at a local St. Paul high school where it is being used for student
+                                empowerment. </li>
+                        </ul>
+                    </p>
+
+                    <md-card-footer>
+                        <sm>JULY 2017 - DECEMBER 2017</sm>
+                    </md-card-footer>
+                </div>
+            </md-card>
+
             <md-card>
                 <div class="md-padding">
                     <md-card-header>
@@ -22,7 +58,8 @@
                             <li>Manage the production and processing of endorsements, finance agreements, and client deliverables.</li>
                             <li>Assist in the management of a book of business with a focus on account retention and penetration.</li>
                             <li>Manage the day to day operations of the National PACE Association’s affiliated stop-loss reinsurance
-                                program.</li>
+                                program.
+                            </li>
                         </ul>
                     </p>
 
@@ -98,8 +135,41 @@
                 </div>
             </md-card>
 
+            <md-card>
+                <div class="md-padding">
+                    <md-card-header>
+                        <md-card-header-text class="md-headline">
+                            <t>Shift Supervisor
+                                <i>Wells Fargo Home Mortgage</i>
+                            </t>
+                        </md-card-header-text>
+                    </md-card-header>
+                    </p>
+                    <p>
+                        <more>
+                            <ul>
+                                <li>Coached and developed a diverse team to cultivate motivated and engaged employees who provided
+                                    excellent customer service. </li>
+                                <li>Took ownership of store sales goals and developed strategies to exceed sales objectives and
+                                    customer service standards, where we consistently ranked at the top of our region for
+                                    customer satisfaction.</li>
+                                <li>Controlled labor distribution to ensure great guest experience and ensure budget goals are
+                                    achieved.
+                                </li>
+                                <li>Studied and examined operations and proactively implemented changes to operations to maintain
+                                    future reliability.</li>
+
+                            </ul>
+                        </more>
+                    </p>
+                    <md-card-footer>
+                        <sm>OCTOBER 2010 - APRIL 2012</sm>
+                    </md-card-footer>
+                </div>
+            </md-card>
+
         </div>
-        <!--/.row -->
-        <br>
+        <div layout="column" layout-fill layout="center center" flex="10"></div>
+    </div>
     </div>
 </section>
