Hid bitbucket logo, updated about me to match LinkedIn.

--- a/server/public/views/resume.html
+++ b/server/public/views/resume.html
@@ -52,13 +52,11 @@
                     </md-card-header>
                     <p>
                         <ul>
-                            <li>Act as the daily contact point for client risk management and insurance needs.</li>
-                            <li>Act as a key client liaison fielding complex coverage questions and and managing the insurance
-                                purchasing process.</li>
+                            <li>Act as the daily contact point for client risk management and insurance needs. </li>
+                            <li>Act as a key client liaison fielding complex coverage questions and managing the insurance purchasing process.</li>
                             <li>Manage the production and processing of endorsements, finance agreements, and client deliverables.</li>
-                            <li>Assist in the management of a book of business with a focus on account retention and penetration.</li>
-                            <li>Manage the day to day operations of the National PACE Association’s affiliated stop-loss reinsurance
-                                program.
+                            <li>Assist in the management of a book of business with a focus on retention and account penetration.</li>
+                            <li>Manage the day to day operations of the National PACE Association’s affiliated stop-loss reinsurance program.
                             </li>
                         </ul>
                     </p>
