--- a/server/public/views/aboutme.html
+++ b/server/public/views/aboutme.html
@@ -3,19 +3,15 @@
         <div layout="column" layout-fill layout="center center" flex="10"></div>
         <div layout="column">
             <h2>{{uc.user.data.name}}</h3>
-        <p>I'm a full stack web developer based out of {{uc.user.data.location}}. I work primarily in the MEAN stack. Outside
-            of coding, I love to ride my bicycle, hike, and spend time with my wife and friends.</p>
-        <p>My professional background is in the financial and insurance industries. During my tenures with Wells Fargo and Aon
-            Risk Solutions, I was able to provide technical communication, interaction, and services to a variety of c-suite
-            clientele. I'm excited to transfer my communication, team work, and problem solving skills to the realm of software
-            development.</p>
+        <p>I'm a driven full stack software engineer with half a decade worth of experience working with high-value clients. My backgrounds in mortgage and insurance provide me with a problem-solving foundation upon which I've built development skills through an intensive development training program.</p>
+        <p>I enjoy working on close-knit teams delivering excellent customer experiences, whether that be through deliverables, deliverables, or client contact experiences.</p>
+        <p>I was the kid that took apart the VCR. I dive into things to see how they work. Whether it's code, arduinos, my numerous hobbies, or the family's VCR, I'm there to take it apart and put it back together. I'm driven to build things. Whether it's client deliverables, applications, or experiences, I enjoy constructing something for people to experience, use, and enjoy. Software engineering has empowered me to have an engaging outlet to push myself and my learning to the next level.</p>
         <h4>Some Friendly Github Stats:</h4>
         <p>Public Repos: {{uc.user.data.public_repos}}</p>
         <p>Total Private Repos: {{uc.user.data.total_private_repos}}</p>
         <p>Followers: {{uc.user.data.followers}}</p>
         <p>Following: {{uc.user.data.following}}</p>
-        <p>E-mail me at
-            <a href="mailto:{{uc.user.data.email}}" style="text-decoration: none; color: rgba(0, 0, 0, 0.54);">{{uc.user.data.email}}</a>.</p>
+        <p>E-mail me at <a href="mailto:{{uc.user.data.email}}" style="text-decoration: none; color: rgba(0, 0, 0, 0.54);">{{uc.user.data.email}}</a>.</p>
         </div>
         <div layout="column" layout-fill layout="center center" flex="10"></div>
     </div>
