--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -13,8 +13,8 @@
         <a href="http://www.linkedin.com/in/ericfriday">
             <img src="/images/linkedin-large.png" alt="LinkedIn">
         </a>
-        <a href="https://bitbucket.org/ericfriday/">
+        <!-- <a href="https://bitbucket.org/ericfriday/">
             <img src="/images/bitbucket-large.png" alt="BitBucket">
-        </a>
+        </a> -->
     </div>
 </section>
