--- a/public/views/resume.html
+++ b/public/views/resume.html
@@ -138,7 +138,7 @@
                     <md-card-header>
                         <md-card-header-text class="md-headline">
                             <t>Shift Supervisor
-                                <i>Wells Fargo Home Mortgage</i>
+                                <i>Caribou Coffee</i>
                             </t>
                         </md-card-header-text>
                     </md-card-header>
